--- a/app/app/index.html
+++ b/app/app/index.html
@@ -14,9 +14,9 @@
 
     <!-- build:css styles/custom.css -->
         <!-- injector:css -->
+        <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/customcordova.css">
         <link rel="stylesheet" href="css/demo.css">
-        <link rel="stylesheet" href="css/app.css">
         <!-- endinjector -->
     <!-- endbuild -->
     <script src="cordova.js"></script>
@@ -59,7 +59,7 @@
         <!--<div class="container">-->
             <!--<div class="row">-->
                 <!--<div class="col-md-12">-->
-                    <section id="uiview" ui-view></section>
+                    <div id="uiview" ui-view></div>
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
