--- a/app/app/index.html
+++ b/app/app/index.html
@@ -24,27 +24,6 @@
   </head>
 
   <body>
-    <!-- =================== Navigation bar =================== -->
-    <!--<header class="navbar navbar-default navbar-fixed-top">-->
-        <!--<div class="navbar-inner">-->
-            <!--<div class="container">-->
-                <!--<div class="navbar-header">-->
-                    <!--<a class="navbar-brand visible-xs" href="#!/">-->
-                        <!--home-->
-                    <!--</a>-->
-                    <!--<a class="navbar-brand visible-xs" href="#!/login">-->
-                        <!--Login-->
-                    <!--</a>-->
-                    <!--<a class="navbar-brand visible-xs" href="#!/profile">-->
-                        <!--Profile-->
-                    <!--</a>-->
-                    <!--<a class="navbar-brand visible-xs" href="#!/mail">-->
-                        <!--Mail-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</header>-->
 
     <!--<div class="header-placeholder"></div>-->
     <!--<div role="main">-->
@@ -97,18 +76,25 @@
         <script src="js/application.js"></script>
         <script src="modules/core/core.js"></script>
         <script src="modules/login/login.js"></script>
-        <script src="modules/mail/mail.js"></script>
+        <!--<script src="modules/mail/mail.js"></script>-->
         <script src="modules/profile/profile.js"></script>
+        <script src="modules/queue/queue.js"></script>
+
         <script src="modules/core/config/routes.js"></script>
         <script src="modules/login/config/routes.js"></script>
-        <script src="modules/mail/config/routes.js"></script>
+        <!--<script src="modules/mail/config/routes.js"></script>-->
         <script src="modules/profile/config/routes.js"></script>
+        <script src="modules/queue/config/routes.js"></script>
+
         <script src="modules/core/services/localization.js"></script>
-        <script src="modules/mail/services/mailModel.js"></script>
+        <!--<script src="modules/mail/services/mailModel.js"></script>-->
         <script src="modules/core/controllers/home.js"></script>
         <script src="modules/login/controllers/login.js"></script>
-        <script src="modules/mail/controllers/mail.js"></script>
+        <!--<script src="modules/mail/controllers/mail.js"></script>-->
         <script src="modules/profile/controllers/profile.js"></script>
+        <script src="modules/queue/controllers/queue.js"></script>
+        <script src="modules/queue/controllers/queue-list.js"></script>
+        <script src="modules/queue/services/queue-model.js"></script>
         <!-- endinjector -->
     <!-- endbuild -->
 
