--- a/app/app/index.html
+++ b/app/app/index.html
@@ -76,25 +76,25 @@
         <script src="js/application.js"></script>
         <script src="modules/core/core.js"></script>
         <script src="modules/login/login.js"></script>
-        <!--<script src="modules/mail/mail.js"></script>-->
+        <script src="modules/mail/mail.js"></script>
         <script src="modules/profile/profile.js"></script>
         <script src="modules/queue/queue.js"></script>
-
         <script src="modules/core/config/routes.js"></script>
         <script src="modules/login/config/routes.js"></script>
-        <!--<script src="modules/mail/config/routes.js"></script>-->
+        <script src="modules/mail/config/routes.js"></script>
         <script src="modules/profile/config/routes.js"></script>
         <script src="modules/queue/config/routes.js"></script>
-
         <script src="modules/core/services/localization.js"></script>
-        <!--<script src="modules/mail/services/mailModel.js"></script>-->
-        <script src="modules/core/controllers/home.js"></script>
-        <script src="modules/login/controllers/login.js"></script>
-        <!--<script src="modules/mail/controllers/mail.js"></script>-->
-        <script src="modules/profile/controllers/profile.js"></script>
-        <script src="modules/queue/controllers/queue.js"></script>
-        <script src="modules/queue/controllers/queue-list.js"></script>
+        <script src="modules/mail/services/mailModel.js"></script>
         <script src="modules/queue/services/queue-model.js"></script>
+        <script src="modules/core/directives/pop-up.js"></script>
+        <script src="modules/core/controllers/home.js"></script>
+        <script src="modules/core/controllers/pop-up.js"></script>
+        <script src="modules/login/controllers/login.js"></script>
+        <script src="modules/mail/controllers/mail.js"></script>
+        <script src="modules/profile/controllers/profile.js"></script>
+        <script src="modules/queue/controllers/queue-list.js"></script>
+        <script src="modules/queue/controllers/queue.js"></script>
         <!-- endinjector -->
     <!-- endbuild -->
 
